src/components/layout.css
body, html {
  width: 100%;
  overflow-x: hidden;
}

img {
  max-width: 100%;
}

hr {
  margin-bottom: calc(1.45rem - 1px);
  background: hsla(0, 0%, 0%, 0.2);
  border: none;
  height: 1px;
}

b {
  font-weight: bold;
}

strong {
  font-weight: bold;
}

ol li {
  padding-left: 0;
}

ul li {
  padding-left: 0;
}

a[title="Report errors in the road map or imagery to Google"], a[title="Click to see this area on Google Maps"], button.gm-control-active.gm-fullscreen-control, .gmnoprint {
  display: none !important;
}

